[package]
authors = ["Binary Star <as@binary-star.org>"]
edition = "2018"
name = "usdn"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-contract-standards = "4.0.0-pre.4"
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
debug = false
lto = true
opt-level = "z"
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
