[package]
authors = ["Binary Star <as@binary-star.org>"]
edition = "2018"
name = "usn"
version = "0.1.3"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-contract-standards = "4.0.0-pre.4"
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
overflow-checks = true
panic = "abort"

[profile.sandbox]
inherits = "release"

[profile.testnet]
inherits = "release"

[profile.mainnet]
inherits = "release"

[features]
# Enables testnet configuration if expicitly stated.
# It makes the USN contract use a testnet oracle.
testnet = []

# Enables mainnet configuration if expicitly stated.
# It makes the USN contract use a main oracle.
mainnet = []
